tdf#63029 Copy and paste comments with slide

Change-Id: Iceb0e744f8e994ece91cd8f50fefaed631aa8396